fix background on mobile for quiz page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,6 +747,11 @@ label {
   .card {
     width: 100%;
   }
+
+  .background-mobile {
+    background-color: #f5f5f5;
+    height: 100%;
+  }
 }
 @media only screen and (max-width: 375px) {
   .text-animation {
